// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="Dog"
  >
    <h1>
      yodog
    </h1>
    <p>
      yodog has been adopted!
    </p>
  </div>
</DocumentFragment>
`;

exports[`should match snapshot 2`] = `
<DocumentFragment>
  <div
    class="Dog"
  >
    <h1>
      yodog
    </h1>
    <button>
      Adopt me!
    </button>
  </div>
</DocumentFragment>
`;
